--- a/app/views/reports/incident_age/_mail.html.erb
+++ b/app/views/reports/incident_age/_mail.html.erb
@@ -4,7 +4,7 @@
   }
 </style>
 <!--  irm datatable      -->
- <div class="irm-datatable">
+ <div class="datatable">
    <div>
        <table count="<%=@count%>">
          <thead>
