--- a/app/views/reports/incident_amount_month_by_status/_params.html.erb
+++ b/app/views/reports/incident_amount_month_by_status/_params.html.erb
@@ -1,4 +1,4 @@
-<table cellpadding="0" cellspacing="0" border="0" id="baseFilter">
+<table class="form-table baseFilter" id="baseFilter">
   <tbody>
     <tr>
       <td>
