--- a/app/views/reports/incident_elapse_by_status/_params.html.erb
+++ b/app/views/reports/incident_elapse_by_status/_params.html.erb
@@ -1,6 +1,5 @@
-<% require_javascript(:datepicker) %>
-<% require_css(:datepicker) %>
-<table cellpadding="0" cellspacing="0" border="0" id="baseFilter">
+<table class="form-table baseFilter" id="baseFilter">
+
   <tbody>
     <tr>
       <td width="30%"></td>
@@ -51,11 +50,11 @@
             <tr>
               <td>
                 <label for="filterDateFrom"><%= t(:label_irm_report_filter_date_from) %></label>
-                <%= text_field_tag(:date_from,program_params[:date_from],:id=>"filterDateFrom",:name=>"program_params[date_from]",:size=>12,:class=>"date",:nobutton=>true)%>
+                <%= date_field_tag(:date_from,:value=>program_params[:date_from],:id=>"filterDateFrom",:name=>"program_params[date_from]",:nobutton=>true)%>
               </td>
               <td>
                 <label for="filterDateTo"><%= t(:label_irm_report_filter_date_to) %></label>
-                <%= text_field_tag(:date_to,program_params[:date_to],:id=>"filterDateTo",:name=>"program_params[date_to]",:size=>12,:class=>"date",:nobutton=>true)%>
+                <%= date_field_tag(:date_to,:value=>program_params[:date_to],:id=>"filterDateTo",:name=>"program_params[date_to]",:nobutton=>true)%>
               </td>
             </tr>
           </table>
