--- a/app/views/reports/incident_elapse_by_support/_html.html.erb
+++ b/app/views/reports/incident_elapse_by_support/_html.html.erb
@@ -1,7 +1,7 @@
 <div id="reportChart"></div>
 
 <!--  irm datatable      -->
- <div class="irm-datatable">
+ <div class="datatable">
    <div>
        <table count="<%=datas[:datas].size%>">
          <thead>
