--- a/app/views/reports/incident_request_month_duration_by_priority/_params.html.erb
+++ b/app/views/reports/incident_request_month_duration_by_priority/_params.html.erb
@@ -1,6 +1,5 @@
-<% require_javascript(:datepicker) %>
-<% require_css(:datepicker) %>
-<table cellpadding="0" cellspacing="0" border="0" id="baseFilter">
+<table class="form-table baseFilter" id="baseFilter">
+
   <tbody>
     <tr>
       <td width="30%"></td>
