--- a/app/views/reports/incident_support_group_amount/_html.html.erb
+++ b/app/views/reports/incident_support_group_amount/_html.html.erb
@@ -1,5 +1,5 @@
 <!--  irm datatable      -->
- <div class="irm-datatable">
+ <div class="datatable">
    <div>
        <table count="<%=datas[:datas].size%>">
          <thead>
