修改配置项查看页面上的表格显示

--- a/modules/com/app/views/com/config_classes/show.html.erb
+++ b/modules/com/app/views/com/config_classes/show.html.erb
@@ -53,8 +53,7 @@
   </table>
   <div class="page-block-body">
     <div id="config_attributes"></div>
-    <%= datatable("config_attributes",{:controller=>"com/config_attributes",:action=>"get_data",:format=>"json",:class_id=>@config_class.id},[],{:paginator_box=>"config_attributesPaginatorBox",:select=>"multiple", :search_box=>"config_attributesSearchBox"})%>
-    <div id="config_attributesPaginatorBox"></div>
+    <%= datatable("config_attributes",{:controller=>"com/config_attributes",:action=>"get_data",:format=>"json",:class_id=>@config_class.id},[],{:select=>"multiple", :search_box=>"config_attributesSearchBox"})%>
   </div>
 </div>
 <!-- 结束配置属性列表 -->
@@ -73,8 +72,7 @@
   </table>
   <div class="page-block-body">
     <div id="config_relation_types"></div>
-    <%= datatable("config_relation_types",{:controller=> "config_relation_types", :action=>"get_data",:format=>"json",:class_id=>@config_class.id},[],{:paginator_box=>"config_relation_typesPaginatorBox",:search_box=>"config_relation_typesSearchBox"})%>
-    <div id="config_relation_typesPaginatorBox"></div>
+    <%= datatable("config_relation_types",{:controller=> "config_relation_types", :action=>"get_data",:format=>"json",:class_id=>@config_class.id},[],{:search_box=>"config_relation_typesSearchBox"})%>
   </div>
 </div>
 <!-- 配置项关系类型列表结束 -->
