--- a/app/views/irm/common/login.html.erb
+++ b/app/views/irm/common/login.html.erb
@@ -1,5 +1,5 @@
-<% require_css(:login) %>
-<% require_javascript([:jquery,:jplugin]) %>
+<% require_jscss(:login) %>
+<% require_jscss(:login_ie6) if ie6? %>
  <body id="loginpage">
         <div id="pagewrap">
           <div id="newheader">
@@ -7,30 +7,28 @@
           </div>
           <div id="gradientwrap">
             <div class="bottom">
-              <div class="login_form_box">
+              <div class="login-form-box">
                 <div class="content_new">
                 <%= form_tag({:action=> "login"},{:id=>"login_form"}) do %>
                    <%= back_url_hidden_field_tag %>
                       <% if params[:error] %>
-                      <div class="loginError"><%= params[:error] %></div>
+                        <div class="alert alert-error" style="width: 250px;"><%= params[:error] %></div>
                       <% end %>
                       <div class="inputs">
                         <div class="inputbox">
                           <label><%=(t :label_irm_common_username)%></label>
-                          <br>
                           <span><%=text_field_tag :username,nil, :class => "txtbox", :id=>"userName",:autocomplete=>"off",:span => true%></span>
                         </div>
                         <div class="inputbox inputbox_password">
                           <label><%=(t :label_irm_common_password)%></label>
-                          <br>
                           <span><%=password_field_tag :password, nil, :class => "txtbox",:id=>"password",:autocomplete=>"off", :span => true%></span>
                         </div>
                       </div>
-                      <div class="rememberme_txt">
+                      <div class="rememberme-txt">
                         <input type="checkbox" name="rememberme" span=true id="rememberchk"><label for="rememberchk"><%= t(:remember_user_name)%></label>
                       </div>
-                      <div class="login_button">
-                        <%= link_to t(:label_irm_common_login),{},:type=>"submit",:id=>"sumbitlogin"%>
+                      <div class="login-button">
+                        <%= link_to t(:label_irm_common_login),{},:id=>"sumbitlogin",:class => "submit btn btn-primary",:style => "margin:4px 9px 5px 12px;"%>
                         <%= link_to t(:label_irm_common_forgot_password), {:controller => "irm/common", :action => "forgot_password"}, {:class => "forgotpass"}%>
                       </div>
                  <%end%>
@@ -41,9 +39,7 @@
                 </div>
                 <span class="bottom_new"></span>
               </div>
-              <iframe id="shoutoutframe" frameborder=0 scrolling="no" src="/pages/loginimage.html?<%= Time.now.to_i%>">
-
-              </iframe>
+              <iframe id="shoutoutframe" frameborder=0 scrolling="no" src="/pages/loginimage.html?<%= Time.now.to_i%>"></iframe>
               
               <!--<div id="infobarcontent">-->
                 <!--<div class="infobar">-->
