--- a/app/views/irm/bulletins/index.html.erb
+++ b/app/views/irm/bulletins/index.html.erb
@@ -1,35 +1,17 @@
 <%= common_title%>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_irm_bulletin) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:controller => "irm/bulletins", :action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <div id="bulletins_list" class="datatable" style="width:100%">
-          <div id="bulletin_title" style="display:none">
-            <%= link_to("{bulletin_title}", {:controller => "irm/bulletins", :action => "show", :id => "{id}"})%>
-          </div>
-        </div>
-          <%= datatable("bulletins_list",{:controller => "irm/bulletins", :action=>"get_data",:format=>"json"},
-                        [{:key=>"id",:label=>"", :hidden => true},
-                         {:key=>"bulletin_title",:label=>t(:label_irm_bulletin_title), :formatter=>"Y.irm.template", :sortable=>true,:width => "500px"},
-                         {:key=>"page_views",:label=>t(:label_irm_bulletin_page_views), :width => "100px"},
-                         {:key=>"published_date",:label=>t(:label_irm_bulletin_published_date)}],
-                         {:paginator_box=>"bulletinsPaginatorBox"})%>
-        <div id="bulletinsPaginatorBox"></div>
-      </div>
-    </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_irm_bulletin) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:new),  {:controller => "irm/bulletins", :action => "new"},:class=>"btn"%>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <%= datatable("bulletins_list",{:controller => "irm/bulletins", :action=>"get_data"},[],{:paginator_box=>"bulletinsPaginatorBox"})%>
+  </div>
 </div>
 
 <% content_for :sidebar do %>
