--- a/app/views/irm/bulletins/show.html.erb
+++ b/app/views/irm/bulletins/show.html.erb
@@ -1,21 +1,18 @@
 <%= common_title(:show_data=>@bulletin.title) %>
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @bulletin}%></div>
-            <div class="button"><%= link_to t(:delete), {:action => "destroy", :id => @bulletin},:method => :delete,:confirm => t(:label_are_you_sure)%></div>
-            <div class="button"><%= link_to t(:back), {:action => "index", :controller => "irm/home"}%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubheader tertiaryPalette">
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit"},:class=>"btn btn-primary"%>
+      <%= link_to t(:delete), {:action => "destroy", :id => @bulletin},:method => :delete,:confirm => t(:label_are_you_sure),:class => "btn"%>
+      <%= link_to t(:back), {:action => "index", :controller => "irm/home"},:class=>"btn btn-cancel" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <div class="page-block-subheader tertiary-palette">
       <div align="center">
         <span style="font-size:20px !important;"><%= @bulletin.title%></span><br>
         <span style="font-size:12px !important;font-weight:normal;">
@@ -24,10 +21,10 @@
       </div>
     </div>
 
-    <div class="pbSubsection" style="margin-left:30px;margin-right:30px;">
+    <div class="page-block-subsection" style="margin-left:30px;margin-right:30px;">
         <pre><%= raw(@bulletin.content)%> </pre>
     </div>
-    <div class="pbSubsection" style="margin-top:50px;">
+    <div class="page-block-subsection" style="margin-left:30px;margin-bottom: 10px;">
        <% prepare_bulletin_files(@bulletin)%>
        <% if @bulletin_files && @bulletin_files.any? %>
        <br>
@@ -36,6 +33,7 @@
     </div>
   </div>
 </div>
+
 <% content_for :sidebar do %>
     <%= render :partial =>"/irm/common/recently_objects" %>
 <% end %>
