--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -810,6 +810,7 @@ body .nav-tab-bar .nav-tab {
 .page-block .page-block-header .page-block-title {
     padding: 5px 12px 5px 12px;
     width: 30%;
+    text-align: left;
 }
 
 .page-block .page-block-header .page-block-title .block-title {
