修正日期选择控件css

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1442,6 +1442,9 @@ table.form-table  td.button-col{
     width: 3px;
 } 
 
+.date-field  input.span2{
+    width: 80px;
+}
 
 //========show page block======
 table.show-table {
