修正日期选择控件css

--- a/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/framework.css.less
@@ -1442,7 +1442,7 @@ table.form-table  td.button-col{
     width: 3px;
 } 
 
-.date-field  input.span2{
+.date-field  input.date-input{
     width: 80px;
 }
 
