--- a/modules/com/app/views/com/config_item_relations/_new_form.html.erb
+++ b/modules/com/app/views/com/config_item_relations/_new_form.html.erb
@@ -1,77 +1,75 @@
-<%= form_for(@config_item_relation,:url=>{:action=>"create"},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@config_item_relation,:url=>{:action=>"create"},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common   do%>
+    <table class="form-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_com_config_item_relation)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_item)%></label></td>
+            <td class="data-col"><label><%=@config_item[:item_number]%></label></td>
+    
+            <td class="label-col"><%=f.hidden_field :config_item_id,:value=>@config_item[:id] %></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_relation_type)%></label></td>
+            <td class="data-col"><%= f.select :config_relation_type_id, nullable_options_for_select(available_config_relation_type, @config_item_relation.config_relation_type_id )
+            %></td>
+    
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_item_relation_config_item)%></label></td>
+            <td class="data-col"><%= f.select :relation_config_item_id, nullable_options_for_select(available_config_item, @config_item_relation.relation_config_item_id )
+            %></td>
+    
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:description)%></label></td>
+            <td class="data-3col" colspan="3"><%=f.text_area :description,:rows=>4,:cols=>60 %></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
+  <% end %>
+
+
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_com_config_item_relation)%></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
     <%= error_for @config_item_relation %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
+
     </div>
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-        <tr>
-          <td class="labelCol"><label><%=(t :label_com_config_item)%></label></td>
-          <td class="dataCol"><%=@config_item[:item_number]%></td>
 
-          <td class="labelCol"><%=f.hidden_field :config_item_id,:value=>@config_item[:id] %></td>
-          <td class="dataCol"></td>
-        </tr>
-        <tr>
-          <td class="labelCol"><label><%=(t :label_com_config_relation_type)%></label></td>
-          <td class="dataCol"><%= f.select :config_relation_type_id, nullable_options_for_select(available_config_relation_type, @config_item_relation.config_relation_type_id )
-          %></td>
-
-          <td class="labelCol"></td>
-          <td class="dataCol"></td>
-        </tr>
-        <tr>
-          <td class="labelCol"><label><%=(t :label_com_config_item_relation_config_item)%></label></td>
-          <td class="dataCol"><%= f.select :relation_config_item_id, nullable_options_for_select(available_config_item, @config_item_relation.relation_config_item_id )
-          %></td>
-
-          <td class="labelCol"></td>
-          <td class="dataCol"></td>
-        </tr>
-        <tr>
-          <td class="labelCol"><label><%=t(:description)%></label></td>
-          <td class="dataCol" colspan="3" width="82%"><%=f.text_area :description,:rows=>4,:cols=>60 %></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title">
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>        
+      </td>
+    </tr></table>
   </div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
 <% end %>
+
