--- a/modules/com/app/views/com/config_item_relations/show.html.erb
+++ b/modules/com/app/views/com/config_item_relations/show.html.erb
@@ -1,49 +1,44 @@
 <%= page_title %>
-
-<div id="ep" class="detail-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<!--页面结构-->
+<div class="show-block">
+  <table class="page-block-header"><tr>
+    <td class="page-block-title">
+      <h2 class="block-title"><%= t(:label_com_config_item_relation) %></h2>
+    </td>
+    <td class="page-block-button">
+      <%= link_to t(:edit), {:action => "edit", :id => @config_item_relation},:class=>"btn btn-primary"%>
+      <%= link_to t(:back), {:controller=>"com/config_items",:action => "show",:id=>@config_item_relation[:config_item_id]},:class=>"btn btn-cancel" %>
+    </td>
+  </tr></table>
+  <div class="page-block-body">
+    <table class="show-table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_com_config_item_relation) %></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= link_to t(:edit), {:action => "edit", :id => @config_item_relation}%></div>
-            <div class="button"><%= link_to t(:back), {:controller=>"com/config_items",:action => "show",:id=>@config_item_relation[:config_item_id]}%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_item)%></label></td>
+            <td class="data-col"><%=@config_item[:item_number]%></td>
+    
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_relation_type)%></label></td>
+            <td class="data-col"><%=@config_item_relation[:relation_type_name]   %></td>
+    
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_item_relation_config_item)%></label></td>
+            <td class="data-col"><%=@config_item_relation[:relation_item_number]              %></td>
+    
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:description)%></label></td>
+            <td class="data-col" colspan="3" width="82%"><%=@config_item_relation[:description] %></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
-    <div class="pbSubsection">
-      <table class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>   <tr>
-                  <td class="labelCol"><label><%=(t :label_com_config_item)%></label></td>
-                  <td class="dataCol"><%=@config_item[:item_number]%></td>
-
-                  <td class="labelCol"></td>
-                  <td class="dataCol"></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_com_config_relation_type)%></label></td>
-                  <td class="dataCol"><%=@config_item_relation[:relation_type_name]   %></td>
-
-                  <td class="labelCol"></td>
-                  <td class="dataCol"></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=(t :label_com_config_item_relation_config_item)%></label></td>
-                  <td class="dataCol"><%=@config_item_relation[:relation_item_number]              %></td>
-
-                  <td class="labelCol"></td>
-                  <td class="dataCol"></td>
-                </tr>
-                <tr>
-                  <td class="labelCol"><label><%=t(:description)%></label></td>
-                  <td class="dataCol" colspan="3" width="82%"><%=@config_item_relation[:description] %></td>
-                </tr>
-                  </tbody>
-      </table>
-    </div>
   </div>
 </div>
