--- a/modules/com/app/views/com/config_items/_edit_form.html.erb
+++ b/modules/com/app/views/com/config_items/_edit_form.html.erb
@@ -1,95 +1,82 @@
-<% require_javascript(:datepicker) %>
-<% require_css(:datepicker) %>
-<%= form_for(@config_item,:url=>{:action=>"update",:id=>@config_item.id},:builder => LabellingFormBuilder) do |f| %>
-<div id="ep" class="edit-block page-block">
-  <div class="pbHeader">
-    <table cellpadding="0" cellspacing="0" border="0">
+<%= form_for(@config_item,:url=>{:action=>"update",:id=>@config_item.id},:builder => CustomFormBuilder) do |f| %>
+  <% content_for :form_block_common  do%>
+    <table class="form-table" id="config_item_table">
       <tbody>
-        <tr>
-          <td class="pbTitle"><h2 class="mainTitle"><%=t(:label_com_config_item)%></h2></td>
-          <td id="topButtonRow" class="pbButton">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
+          <tr>
+            <td class="label-col"><label><%=t(:label_com_config_item_number)%></label></td>
+            <td class="data-col"><label><%=@config_item.item_number %></label></td>
+            <td class="label-col empty">&nbsp;</td>
+            <td class="data-col empty">&nbsp;</td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_item_config_class)%></label></td>
+            <td class="data-col"><%= f.select :config_class_id, nullable_options_for_select(available_config_class,@config_item.config_class_id),
+                                             {}, {:require=>true,:id=>"config_class_id"} %></td>
+
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_item_managed_group)%></label></td>
+            <td class="data-col"><%= f.select :managed_group_id, nullable_options_for_select(available_support_group, @config_item.managed_group_id ),
+                                             {},{:id=>"config_item_managed_group_id"} %></td>
+
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
+          <tr>
+            <td class="label-col"><label><%=(t :label_com_config_item_managed_person)%></label></td>
+            <td class="data-col"><%= f.select(:managed_person_id,nullable_options_for_select([],nil),{},{
+                                                     :id=>"config_item_managed_person_id",
+                                                     :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${config_item_managed_group_id}"),
+                                                     :depend=>"config_item_managed_group_id",
+                                                     :origin_value=>@config_item.managed_person_id,
+                                                     :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
+                                             }) %></td>
+
+            <td class="label-col"></td>
+            <td class="data-col"></td>
+          </tr>
       </tbody>
     </table>
-  </div>
-  <div class="pbBody">
+  <% end %>
+  <% content_for :form_buttons  do %>
+    <%= link_submit t(:save),{:class=>"btn btn-primary"}%>
+    <%= link_back t(:cancel),{},{:class=>"btn cancel"}%>
+  <% end %>
+
+  <!--页面结构-->
+  <div class="page-block">
+    <table class="page-block-header"><tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%=t(:label_com_config_item)%></h2>
+      </td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+
+      </td>
+    </tr></table>
     <%= error_for @config_item %>
-    <% @config_item.config_item_attributes.each do |i| %>
-            <%=show_config_items_attributes_errors(i)  %>
-    <% end %>
-    <div id="head_1_ep" class="pbSubheader first tertiaryPalette">
-      <span class="pbSubExtra">
-        <span class="requiredLegend">
-          <span class="requiredExampleOuter">
-            <span class="requiredExample">&nbsp;</span>
-          </span><span class="requiredMark">*</span>
-          <span class="requiredText"> = <%=t(:label_is_required)%></span>
-        </span>
-      </span>
-      <h3><%= t(:label_common_info) %></h3>
+    <div class="page-block-body">
+      <div class="sub-page-block">
+        <div class="sub-page-block-header">
+          <%= form_require_info %>
+          <h3 class="sub-page-block-title"><%= t(:label_common_info) %></h3>
+        </div>
+        <div class="sub-page-block-body">
+          <%= content_for :form_block_common   %>
+        </div>
+      </div>
     </div>
-    <div class="pbSubsection">
-      <table id="config_item_table" class="detailList" cellpadding="0" cellspacing="0" border="0">
-        <tbody>
-        <tr>
-          <td class="labelCol"><label><%=t(:label_com_config_item_number)%></label></td>
-          <td class="dataCol"><%=@config_item.item_number %></td>
-          <td class="labelCol empty">&nbsp;</td>
-          <td class="dataCol empty">&nbsp;</td>
-        </tr>
-        <tr>
-          <td class="labelCol"><label><%=(t :label_com_config_item_config_class)%></label></td>
-          <td class="dataCol"><%= f.select :config_class_id, nullable_options_for_select(available_config_class,@config_item.config_class_id),
-                                           {}, {:require=>true,:id=>"config_class_id"} %></td>
-
-          <td class="labelCol"></td>
-          <td class="dataCol"></td>
-        </tr>
-        <tr>
-          <td class="labelCol"><label><%=(t :label_com_config_item_managed_group)%></label></td>
-          <td class="dataCol"><%= f.select :managed_group_id, nullable_options_for_select(available_support_group, @config_item.managed_group_id ),
-                                           {},{:id=>"config_item_managed_group_id"} %></td>
-
-          <td class="labelCol"></td>
-          <td class="dataCol"></td>
-        </tr>
-        <tr>
-          <td class="labelCol"><label><%=(t :label_com_config_item_managed_person)%></label></td>
-          <td class="dataCol"><%= f.select(:managed_person_id,nullable_options_for_select([],nil),{},
-                                           {
-                                                   :id=>"config_item_managed_person_id",
-                                                   :href=>url_for(:controller=>"icm/support_groups",:action=>"get_member_options",:format=>"json",:id=>"${config_item_managed_group_id}"),
-                                                   :depend=>"config_item_managed_group_id",
-                                                   :origin_value=>@config_item.managed_person_id,
-                                                   :blank=> "--- #{t(:actionview_instancetag_blank_option)} ---"
-                                           }) %></td>
-
-          <td class="labelCol"></td>
-          <td class="dataCol"></td>
-        </tr>
-
-        </tbody>
-      </table>
-    </div>
+    <div style="display: none;" id="get_dynamic_attributes_url" href="<%=url_for(:controller=>"com/config_items",:action=>"get_dynamic_attributes",:config_class_id=>"{config_class_id}",:config_item_id=>@config_item.id,:_dom_id=>@config_item.id)%>"></div>
+    <table class="page-block-footer"><tr>
+      <td class="page-block-title"></td>
+      <td class="page-block-button">
+        <%= content_for :form_buttons   %>
+      </td>
+    </tr></table>
   </div>
-  <div class="hidden" id="get_dynamic_attributes_url" href="<%=url_for(:controller=>"com/config_items",:action=>"get_dynamic_attributes",:config_class_id=>"{config_class_id}",:config_item_id=>@config_item.id)%>"></div>
-  <div class="pbBottomButtons">
-    <table cellpadding="0" cellspacing="0" border="0">
-      <tbody>
-        <tr>
-          <td class="pbTitle"></td>
-          <td id="bottomButtonRow" class="pbButtonb">
-            <div class="button"><%= f.submit t(:save)%></div>
-            <div class="button"><%= link_back t(:cancel)%></div>
-          </td>
-        </tr>
-      </tbody>
-    </table>
-  </div>
-</div>
+
 <% end %>
 
 <script type="text/javascript">
