--- a/modules/com/app/views/com/config_items/index.html.erb
+++ b/modules/com/app/views/com/config_items/index.html.erb
@@ -1,66 +1,37 @@
 <%= page_title %>
-<div class="listRelatedObject setupBlock">
-    <div class="page-block">
-      <div class="pbHeader">
-        <table cellpadding="0" cellspacing="0" border="0">
-          <tbody>
-            <tr>
-              <td class="pbTitle"><h2 class="mainTitle"><%= t(:label_com_config_item_list) %></h2></td>
-              <td id="topButtonRow" class="pbButton">
-                <div class="button"><%= link_to t(:new), {:action => "new"}%></div>
-              </td>
-              <td class="pbHelp">
-                <div id="config_itemsSearchBox"></div>
-              </td>
-            </tr>
-          </tbody>
-        </table>
-      </div>
-      <div class="pbBody">
-        <table class="split-table">
-          <tr>
-            <td>
-              <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "com/config_classes", :action=>"get_class_tree", :format=>:json),
-                                                                           :tree_id => "tree-div",
-                                                                           :title => t(:label_com_config_class),
-                                                                           :root_text => t(:label_com_config_item_all_class),
-                                                                           :li_attrs => 'id'} %>
-            </td>
-            <td>
-              <table id="config_items_table" >
-                <tbody>
-                <tr id="config_items_table_tr">
-                  <td>
-                    <div id="config_items" class="datatable" style="width:100%">
-                      <div id="id" style="display:none">
-                        <%= link_to(t(:edit), {:action => "edit", :id => "{id}"}) %>
-                        |<%= link_to(t(:show), {:action => "show", :id => "{id}"}) %>
-                      </div>
-                    </div>
-                    <%= datatable("config_items", {:action => "get_data", :format => "json"},
-                                  [{:key => "id", :label => t(:operation), :formatter => "Y.irm.template", :width => "70px"},
-                                   {:key => "item_number", :label => t(:label_com_config_item_number), :width => "140px", :searchable => true},
-                                   {:key => "config_class_name", :label => t(:label_com_config_item_config_class), :width => "140px", :searchable => true},
-                                   {:key => "managed_group_name", :label => t(:label_com_config_item_managed_group), :width => "140px", :searchable => true},
-                                   {:key => "managed_person_name", :label => t(:label_com_config_item_managed_person), :searchable => true},
-                                   {:key => "last_checked_at", :label => t(:label_com_config_item_last_checked_at)},
-                                  ], {:force_html => true, :paginator_box => "config_itemsPaginatorBox", :search_box => "config_itemsSearchBox"}) %>
-                  </td>
-                </tr>
-                <tr>
-                  <td>
-                    <div id="config_itemsPaginatorBox"></div>
-                  </td>
-                </tr>
-                </tbody>
-              </table>
-
-            </td>
-          </tr>
-        </table>
-      </div>
-    </div>
+<!--页面结构-->
+<div class="page-block">
+  <table class="page-block-header">
+    <tr>
+      <td class="page-block-title">
+        <h2 class="block-title"><%= t(:label_com_config_item_list) %></h2>
+      </td>
+      <td class="page-block-button">
+        <%= link_to t(:new), {:action => "new"},:class => "btn btn-primary" %>
+      </td>
+      <td class="page-block-help">
+        <div id="searchBox"></div>
+      </td>
+    </tr>
+  </table>
+  <div class="page-block-body">
+    <table class="split-table" cellpadding="0" cellspacing="0">
+       <tr>
+         <td class="side-bar">
+           <%= render :partial =>"/irm/common/tree_sidebar_template", :locals =>{:tree_url => url_for(:controller => "com/config_classes", :action=>"get_class_tree", :format=>:json),
+                                                                                  :tree_id => "tree-div",
+                                                                                  :title => t(:label_com_config_class),
+                                                                                  :root_text => t(:label_com_config_item_all_class),
+                                                                                  :li_attrs => 'id'} %>
+         </td>
+         <td class="side-content">
+           <%= datatable("config_items", {:action => "get_data"},[], {:force_html => true, :paginator_box => "paginatorBox", :search_box => "searchBox"}) %>
+         </td>
+       </tr>
+    </table>
+  </div>
 </div>
+
 <script type="text/javascript">
     $(document).ready(function(){
           $("#tree-div").bind('nodeListener',function(event, element){
