为知识频道添加对编码和名称字段的搜索功能

--- a/modules/bootstrap/app/assets/stylesheets/framework/login/login.css.less
+++ b/modules/bootstrap/app/assets/stylesheets/framework/login/login.css.less
@@ -169,9 +169,10 @@
     padding:3px 0 0;
     width:300px;
 }
+
 .login-form-box #login_form input.txtbox {
     height:1.8em;
-    height:1.333em\9;/* for ie */
+    height:1.333em\9;
     margin:0;
     width:280px;
 }
